# pyAndroZoo

./: .gitignore  CHANGELOG.rst  MANIFEST.in  README.rst  pyproject.toml  setup.py
.github/workflows/: mypy.yml  release.yml
pyandrozoo/: __init__.py  api.py
